-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.2
-
None
-
Windows
-
5cda0172e0eb912ef4814f3c5618686cbb1a5da1 d9e2574ec82a99a5efa272124e8f5298378720b1
Here is the backtrace from the crash reporter.
Unfortunately i don't know how to reproduce it:
Crash: EXCEPTION_ACCESS_VIOLATION_READ at 0x4 File "qscreen.cpp", line 140, in QScreen::handle File "qwindow.cpp", line 2529, in QWindowPrivate::applyCursor File "qwindow.cpp", line 523, in QWindow::setVisible File "qwidget.cpp", line 7964, in QWidgetPrivate::show_sys File "qwidget.cpp", line 7887, in QWidgetPrivate::show_helper File "qwidget.cpp", line 8181, in QWidget::setVisible File "qdialog.cpp", line 715, in QDialog::setVisible File "qwidget.cpp", line 3218, in QWidget::showNormal
For Gerrit Dashboard: QTBUG-59528 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
188629,3 | Fix crash in QWindowPrivate::applyCursor when screen is null | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
188927,3 | Fix crash in QWindowPrivate::applyCursor when screen is null | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |